fixed some white space issues in iphone 8 plus version

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -42,6 +42,10 @@
     @include iphone-8-plus {
         flex-direction: column-reverse;
 
+        &--inverted {
+            flex-direction: column;
+        }
+
         &__element {
             width: 100%;
         }
